2002-09-12  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* nethack-api.el: Removed the remains of the window.doc comments.
	They were misleadingly out of date.

	* mkpatch: Don't include win/lisp/TODO file in patch.

	* nethack-api.el (nethack-api-menu-putstr): Rename from
	`nethack-api-putstr'.
	
2002-09-12  Ryan Yeske  <rcyeske@vcn.bc.ca>

	* Makefile (dist): Build the distribution tarball in the current
	directory.
	(DISTFILES): Update patch filename.

	* nethack-api.el (nethack-reset-status-variables): Rename from
	`nethack-reset-status'.
	(nethack-api-curs): Don't take a winid argument.  Always operate
	on `nethack-map-buffer'.
	(nethack-api-message): Split out from nethack-api-putstr.  Always
	operates on `nethack-message-buffer'.
	(nethack-api-print-glyph): Always operate on `nethack-map-buffer'.
	(nethack-inventory-need-update): Add variable.
	(nethack-api-update-inventory): Set
	`nethack-inventory-need-update' to t.
	(nethack-api-create-message-window): No longer takes a winid.
	(nethack-api-create-status-window): Likewise.
	(nethack-api-create-map-window): Likewise.
	(nethack-api-create-inventory-window): Rename winid arg to menuid.
	(nethack-api-start-menu): Likewise.
	(nethack-api-add-menu): Likewise.
	(nethack-api-select-menu): Likewise.
	(nethack-api-clear-nhwindow): Remove.
	(nethack-api-clear-message): New function.
	(nethack-api-clear-map): New function.
	(nethack-api-display-nhwindow): Remove.
	(nethack-api-display-menu): Add function.
	(nethack-api-block): New function.
	(nethack-api-restore-window-configuration): Rename from
	`nethack-restore-window-configuration' as its now also called from
	Nethack.  Change the placement of windows.
	(nethack-menu-submit): Don't set window-configuration unless
	`nethack-window-configuration' contains a valid value.

	* nethack-cmd.el (redraw-screen): Update to call
	`nethack-api-restore-window-configuration'.

	* nethack.el (nethack): Update to call
	`nethack-restore-window-configuration' and